<resources>
    <string name="app_name">SalesApplication</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="verify_pw">Verify Password</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="next">Next</string>
    <string name="initAdm">Create a New Admin</string>
    <string name="title_activity_admin_initiation">admin_initiation</string>
    <string name="title_activity_employee_initilization">employee_initilization</string>
    <string name="initEmp">Create a New Employee</string>
    <string name="title_activity_promote_employee">PromoteEmployee</string>
    <string name="promote">Promote Employee</string>
    <string name="title_activity_admin_options">AdminOptions</string>
    <string name="admin">Admin\'s Name</string>
    <string name="history">View Sales History</string>
    <string name="title_activity_employee_options">EmployeeOptions</string>
    <string name="restock">Restock Items</string>
    <string name="new_user">Create New User</string>
    <string name="new_customer">Create New Customer</string>
    <string name="empl">Employees Name</string>
    <string name="title_activity_create_new_user">CreateNewUser</string>
    <string name="title_activity_create_new_customer">CreateNewCustomer</string>
    <string name="title_activity_restock_items">RestockItems</string>
    <string name="title_activity_sales_history">SalesHistory</string>

    <string name="fishing_rod">Fishing Rode</string>
    <string name="hockey_stick">Hockey Stick</string>
    <string name="skates">Skates</string>
    <string name="running_shoes">Running Shoes</string>
    <string name="protein_bar">Protein Bar</string>
    <string name="quantity">5</string>

</resources>
