<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_initiation">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/Grey"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_menu_white_18dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginTop="10sp"
                android:paddingStart="15sp"
                android:paddingEnd="8sp"
                android:text="@string/initAdm"
                />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_admin_initiation" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/LightGrey"
        android:layout_marginTop="100sp"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:background="@drawable/input_bubble"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:gravity="center"
        android:text="@string/age"
        android:textColor="@color/LightGrey"
        android:layout_marginTop="175sp"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:background="@drawable/input_bubble"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:gravity="center"
        android:text="@string/address"
        android:textColor="@color/LightGrey"
        android:layout_marginTop="250sp"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:background="@drawable/input_bubble"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@color/LightGrey"
        android:layout_marginTop="325sp"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:background="@drawable/input_bubble"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:gravity="center"
        android:text="@string/verify_pw"
        android:textColor="@color/LightGrey"
        android:layout_marginTop="400sp"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:background="@drawable/input_bubble"/>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/baseline_arrow_forward_ios_white_18dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>